force-app/main/default/objects/CCX_Order__c/CCX_Order__c.object-meta.xml
<CustomObject>
    <label>CCX_Order</label>
    <nameField>
        <displayFormat>OId-{000}</displayFormat>
        <label>OrderId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CCX_Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>