force-app/main/default/objects/CCX_Order__c/fields/CCX_Customer__c.field-meta.xml
<CustomField>
    <fullName>CCX_Customer__c</fullName>
    <label>CCX_Customer</label>
    <referenceTo>CCX_Customer__c</referenceTo>
    <relationshipLabel>CCX_Orders</relationshipLabel>
    <relationshipName>CCX_Orders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>