force-app/main/default/objects/CCX_Order__c/fields/CCX_Employee__c.field-meta.xml
<CustomField>
    <fullName>CCX_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CCX_Employee</label>
    <referenceTo>CCX_Employee__c</referenceTo>
    <relationshipLabel>CCX_Orders</relationshipLabel>
    <relationshipName>CCX_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>