force-app/main/default/objects/CCX_Order__c/fields/DateOfOrder__c.field-meta.xml
<CustomField>
    <fullName>DateOfOrder__c</fullName>
    <label>DateOfOrder</label>
    <type>Date</type>
</CustomField>