force-app/main/default/objects/CCX_Order__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <formula>IF( Order_Total__c &gt;=20000,0.20,IF( Order_Total__c &gt;=15000,0.10,IF( Order_Total__c &gt;=1000,0.05,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>