force-app/main/default/objects/CCX_Order__c/fields/Gst_Tax__c.field-meta.xml
<CustomField>
    <fullName>Gst_Tax__c</fullName>
    <defaultValue>0.18</defaultValue>
    <label>Gst Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>