force-app/main/default/objects/CCX_Order__c/fields/Net_Order_Detail_Total__c.field-meta.xml
<CustomField>
    <fullName>Net_Order_Detail_Total__c</fullName>
    <formula>Order_Total__c -( Order_Total__c * Discount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Order Detail Total Before Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>