force-app/main/default/objects/CCX_Order__c/fields/Net_Total_After_Tax__c.field-meta.xml
<CustomField>
    <fullName>Net_Total_After_Tax__c</fullName>
    <formula>Net_Order_Detail_Total__c +  (Net_Order_Detail_Total__c *  Gst_Tax__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Total After Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>