force-app/main/default/objects/CCX_Order__c/fields/Order_Total__c.field-meta.xml
<CustomField>
    <fullName>Order_Total__c</fullName>
    <label>Order Total</label>
    <summarizedField>CCX_OrderDetails__c.OrderDetailTotal__c</summarizedField>
    <summaryForeignKey>CCX_OrderDetails__c.CCX_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>