force-app/main/default/objects/CCX_Order__c/validationRules/DateOfOrder_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>DateOfOrder_rule</fullName>
    <active>false</active>
    <errorConditionFormula>DateOfOrder__c &lt;TODAY()</errorConditionFormula>
    <errorDisplayField>DateOfOrder__c</errorDisplayField>
    <errorMessage>Date must be greater or equal todays date</errorMessage>
</ValidationRule>