force-app/main/default/objects/CCX_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Order_Total__c</columns>
    <columns>Discount__c</columns>
    <columns>Net_Order_Detail_Total__c</columns>
    <columns>CCX_Customer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>